--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   "dependencies": {
     "@elastic/elasticsearch": "^7.9.0",
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/elasticsearch": "^7.1.0",
     "@nestjs/passport": "^7.1.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.3",
-    "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.1",
     "passport": "^0.4.1",
