--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,10 +8,15 @@ steps:
 - name: node
   entrypoint: npm
   args: ['run', 'build']
-    
+
+# Pull api image to speed up build times
+- name: 'gcr.io/cloud-builders/docker'
+  entrypoint: 'bash'
+  args: ['-c', 'docker pull gcr.io/$PROJECT_ID/api || exit 0']
+
 # Build Docker Image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/api', '.']
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/api', '--cache-from', 'gcr.io/$PROJECT_ID/api', '.']
     
 # Push Docker Image to GCR
 - name: 'gcr.io/cloud-builders/docker'
@@ -20,4 +25,6 @@ steps:
 # Deploy to Cloud Run
 - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
   entrypoint: gcloud
-  args: ['run', 'deploy', 'api', '--image', 'gcr.io/$PROJECT_ID/api', '--region', 'us-central1', '--platform', 'managed', '--update-env-vars', 'GOOGLE_CLIENT_ID=projects/$PROJECT_ID/secrets/GOOGLE_CLIENT_ID,GOOGLE_SECRET=projects/$PROJECT_ID/secrets/GOOGLE_SECRET,MONGODB_CONNECTION_URI=projects/$PROJECT_ID/secrets/MONGODB_CONNECTION_URI,JWT_SECRET=projects/$PROJECT_ID/secrets/JWT_SECRET']
+  args: ['run', 'deploy', 'api', '--image', 'gcr.io/$PROJECT_ID/api', '--region', 'us-central1', '--platform', 'managed', '--update-env-vars', 'GOOGLE_CLIENT_ID=projects/$PROJECT_ID/secrets/GOOGLE_CLIENT_ID,GOOGLE_SECRET=projects/$PROJECT_ID/secrets/GOOGLE_SECRET,MONGODB_CONNECTION_URI=projects/$PROJECT_ID/secrets/MONGODB_CONNECTION_URI,DATABASE=projects/$PROJECT_ID/secrets/DATABASE,JWT_SECRET=projects/$PROJECT_ID/secrets/JWT_SECRET']
+
+images: ['gcr.io/$PROJECT_ID/api']
